relative,absolute,fixed,z-index 일반요소 추가

--- a/web_pro06/src/main/webapp/sample03/index.css
+++ b/web_pro06/src/main/webapp/sample03/index.css
@@ -103,7 +103,9 @@
 .none {
 	display: none;
 }
-/* collapse 와 기능은 비슷하나 visibility가 브라우저상 속도가 빠르다.*/
+/*	display의 none도 요소가 숨겨지고 영역도 사라진다.
+	collapse 와 기능은 비슷하나 visibility가 브라우저상 속도가 빠르다.
+	문서를 숨기고, 레이아웃에서도 제외하려면, visibility를 사용하는 대신 display 속성을 none으로 설정*/
 /* visibility 페이지에 특정 속성을 보이거나 보이지 않게 하는 속성 
 	- visible : default, 요소가 화면에 보임
 	- hidden : 요소를 화면에 안 보이게 하지만 페이지 공간은 차지
